# desktop_account_book

./: CMakeLists.txt
src/: main.cpp  sqlitehelper.cpp  sqlitehelper.h
